-----v1.6.0
- Added PlayNext refresh when games change

v1.5.7
- Fix StartPage cover sizing by loading settings on main thread for StartPage view

v1.5.6
- Better fix for StartPage cover width not setting sometimes on startup

v1.5.5
- Fixed PlayNext crash when a game would have same series attached multiple times
- Fixed StartPage cover width not setting sometimes on startup
- Fixed GameActivity data to use local time zone instead of UTC

v1.5.4
- Added argument validation in series score calculator

v1.5.3
- Fixed an extension crash whith Series score calculation where Series were ordered by Release Date and at least two games had no Release Date

v1.5.2
- Fixed a failure to read HowLongToBeat extension data (HLTB v3.5 data format)

v1.5.1
- Fixed Playnite crash when StartPage settings are loaded slower than UI

v1.5.0
- Added Brazilian Portuguese translations (thank you The Nutellas!)
- Added score calculation by Series
- Improved game score by length algorithm (deviation by 0.5 from preferred length is the score limit)
- Optimized zero weight calculations
- Fixed unnecessary calculation on app start

v1.4.0
- Added minimum cover count for use with start page alignments
- Fixed Playnite crash when using start page alignment

v1.3.0
- Added score calculation by game length (requires HowLongToBeat extension)
- Fixed small spacing issues in settings

v1.2.0
- Added start page label display options
- Added German translations (thanks HerrKnarz!)
- Added Italian translations (thanks lordbender!)
- Added a warning in settings for missing recent activity extension
- Fixed score column spacing in main view for German language
- Fixed radiobutton spacing in settings

v1.1.0
- Added an ability to filter for unplayed games with completion statuses
- Added a button to reset all settings to default
- Added buttons to start page game covers
- Added titles to start page game covers
- Fixed an issue with an empty game collection