@@ -54,6 +54,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\StartPage\Settings\PlayNextAddon\StartPageSettingsView.xaml.cs">
+      <DependentUpon>StartPageSettingsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Extensions\StartPage\Settings\PlayNextAddon\StartPageSettingsViewModel.cs" />
     <Compile Include="Infrastructure\Converters\BaseConverter.cs" />
     <Compile Include="Infrastructure\Converters\BooleanToCollapsedVisibilityConverter.cs" />
     <Compile Include="Infrastructure\Converters\InvertedBooleanToCollapsedVisibilityConverter.cs" />
@@ -141,6 +145,10 @@
     <Page Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Extensions\StartPage\Settings\PlayNextAddon\StartPageSettingsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Extensions\StartPage\StartPagePlayNextView.xaml">
       <SubType>Designer</SubType>
