@@ -94,24 +94,7 @@
                     </Grid>
                 </Grid>
             </GroupBox>
-            <GroupBox Header="{DynamicResource LOC_PlayNext_SettingsStartPageGroupTitle}" Visibility="{Binding StartPageExtensionFound, Converter={converters:BooleanToCollapsedVisibilityConverter}}">
-                <StackPanel>
-                    <CheckBox IsChecked="{Binding Settings.StartPageShowLabel}">
-                        <TextBlock Text="{DynamicResource LOC_PlayNext_SettingsStartPageShowLabel}"></TextBlock>
-                    </CheckBox>
-                    <CheckBox IsChecked="{Binding Settings.StartPageLabelIsHorizontal}">
-                        <TextBlock Text="{DynamicResource LOC_PlayNext_SettingsStartPageLabelIsHorizontal}"></TextBlock>
-                    </CheckBox>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"></ColumnDefinition>
-                            <ColumnDefinition Width="*"></ColumnDefinition>
-                        </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Row="0" Grid.Column="0" Text="{DynamicResource LOC_PlayNext_SettingsStartPageMinCoverCount}"></TextBlock>
-                        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Settings.StartPageMinCoverCount}"></TextBox>
-                    </Grid>
-                </StackPanel>
-            </GroupBox>
+          
         </StackPanel>
 
         <GroupBox Grid.Column="1" Header="{DynamicResource LOC_PlayNext_SettingsGameGroupTitle}">
